--- a/ProductivityTools.SportsTracker.SDK/ProductivityTools.SportsTracker.SDK.csproj
+++ b/ProductivityTools.SportsTracker.SDK/ProductivityTools.SportsTracker.SDK.csproj
@@ -17,4 +17,7 @@
       </PackagePath>
     </None>
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+  </ItemGroup>
 </Project>
