--- a/ProductivityTools.SportsTracker.SDK.Tests/ProductivityTools.SportsTracker.SDK.Tests.csproj
+++ b/ProductivityTools.SportsTracker.SDK.Tests/ProductivityTools.SportsTracker.SDK.Tests.csproj
@@ -21,9 +21,16 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="Blob\Pamela.jpg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="client-secrets.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Blob\" />
   </ItemGroup>
 
 </Project>
